# ArkAgent

./: .gitignore  AGENTS.md  Cargo.toml  rust-toolchain.toml  skland-auth.local.example.toml
apps/akbox-cli/: Cargo.toml
apps/akbox-cli/src/: main.rs
apps/akbox-desktop/: Cargo.toml
apps/akbox-desktop/src/: main.rs
assets/fonts/: README.md
assets/templates/: README.md
assets/templates/pages/: inventory_materials_cn.json  inventory_materials_scan_cn.json  operator_detail_status_cn.json
crates/akbox-core/: Cargo.toml
crates/akbox-core/src/: config.rs  debug_artifact.rs  lib.rs  logging.rs
crates/akbox-data/: Cargo.toml
crates/akbox-data/src/: database.rs  lib.rs  official.rs  penguin.rs  prts.rs  repository.rs  skland.rs  sync.rs
crates/akbox-device/: Cargo.toml
crates/akbox-device/src/: lib.rs  ocr.rs  vision.rs
crates/akbox-testkit/: Cargo.toml
docs/: skland-auth-files.md
migrations/: 0001_initial.sql  0002_skland_status_building.sql
scripts/: build-desktop.ps1
