[workspace]
members = [
    "apps/akbox-cli",
    "apps/akbox-desktop",
    "crates/akbox-core",
    "crates/akbox-data",
    "crates/akbox-device",
    "crates/akbox-testkit",
]
resolver = "3"

[workspace.dependencies]
eframe = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
