[package]
name = "akbox-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
akbox-core = { path = "../../crates/akbox-core" }
akbox-data = { path = "../../crates/akbox-data" }
akbox-device = { path = "../../crates/akbox-device" }
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
image.workspace = true
