[package]
name = "akbox-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
akbox-core = { path = "../../crates/akbox-core" }
akbox-data = { path = "../../crates/akbox-data" }
akbox-device = { path = "../../crates/akbox-device" }
eframe.workspace = true
time.workspace = true
tracing.workspace = true
